--- a/ETestUI/Views/MainWindow.xaml
+++ b/ETestUI/Views/MainWindow.xaml
@@ -3,11 +3,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:ETestUI"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     Width="1024"
     Height="768"
+    ResizeMode="NoResize"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Window.Title>
@@ -16,7 +18,170 @@
             <Binding Path="Version" />
         </MultiBinding>
     </Window.Title>
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding AppLoadedEventCommand}" />
+        </i:EventTrigger>
+        <i:EventTrigger EventName="Closed">
+            <i:InvokeCommandAction Command="{Binding AppClosedEventCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
-        <ContentControl prism:RegionManager.RegionName="MainRegionContent" />
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="18*" />
+                <RowDefinition Height="152*" />
+            </Grid.RowDefinitions>
+            <Grid Background="#FFFDA500">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*" />
+                    <ColumnDefinition Width="5*" />
+                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition Width="4*" />
+                </Grid.ColumnDefinitions>
+                <Border BorderBrush="#FFF5D984" BorderThickness="0,0,3,0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Button Margin="5,2">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="2*" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <Image Source="Images/create new post.png" Stretch="Uniform" />
+                                <TextBlock
+                                    Grid.Row="1"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="新建项目" />
+                            </Grid>
+                        </Button>
+                        <Button Grid.Column="1" Margin="5,2">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="2*" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <Image Source="Images/open 打开文件.png" Stretch="Uniform" />
+                                <TextBlock
+                                    Grid.Row="1"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="打开项目" />
+                            </Grid>
+                        </Button>
+                        <Button
+                            Grid.Column="2"
+                            Margin="5,2"
+                            Command="{Binding MenuOperateCommand}"
+                            CommandParameter="2">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="2*" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <Image Source="Images/Tools.png" Stretch="Uniform" />
+                                <TextBlock
+                                    Grid.Row="1"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="管理项目" />
+                            </Grid>
+                        </Button>
+                    </Grid>
+                </Border>
+                <Border
+                    Grid.Column="1"
+                    BorderBrush="#FFF5D984"
+                    BorderThickness="0,0,3,0">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Button Margin="5,2">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="2*" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <Image Source="Images/齿轮，设置，设定，配置，参数.png" Stretch="Uniform" />
+                                <TextBlock
+                                    Grid.Row="1"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="配置" />
+                            </Grid>
+                        </Button>
+                        <Button
+                            Grid.Column="1"
+                            Margin="5,2"
+                            Command="{Binding MenuOperateCommand}"
+                            CommandParameter="4">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="2*" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <Image Source="Images/培训考试.png" Stretch="Uniform" />
+                                <TextBlock
+                                    Grid.Row="1"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    Text="测试模式" />
+                            </Grid>
+                        </Button>
+                    </Grid>
+                </Border>
+                <Border
+                    Grid.Column="2"
+                    BorderBrush="#FFF5D984"
+                    BorderThickness="0,0,3,0" />
+            </Grid>
+            <ContentControl Grid.Row="1" prism:RegionManager.RegionName="MainContentRegion" />
+        </Grid>
+        <StatusBar Grid.Row="1">
+            <StatusBarItem>
+                <StackPanel Orientation="Horizontal">
+                    <Border BorderBrush="Black" BorderThickness="1,0,0,0">
+                        <TextBlock Margin="5,0" Text="状态" />
+                    </Border>
+                    <Border BorderBrush="Black" BorderThickness="1,0,0,0">
+                        <TextBlock Margin="5,0" Text="通信正常" />
+                    </Border>
+                </StackPanel>
+            </StatusBarItem>
+            <StatusBarItem>
+                <StackPanel Orientation="Horizontal">
+                    <Border BorderBrush="Black" BorderThickness="1,0,0,0">
+                        <TextBlock Margin="5,0" Text="项目" />
+                    </Border>
+                    <Border BorderBrush="Black" BorderThickness="1,0,0,0">
+                        <TextBlock Margin="5,0" Text="M02" />
+                    </Border>
+                </StackPanel>
+            </StatusBarItem>
+            <StatusBarItem>
+                <StackPanel Orientation="Horizontal">
+                    <Border BorderBrush="Black" BorderThickness="1,0,0,0">
+                        <TextBlock Margin="5,0" Text="时间" />
+                    </Border>
+                    <Border BorderBrush="Black" BorderThickness="1,0,1,0">
+                        <TextBlock Margin="5,0" Text="{Binding StatusDatetime, StringFormat=yyyy-MM-dd HH:mm:ss, FallbackValue=2021-09-26 11:10:05}" />
+                    </Border>
+                </StackPanel>
+            </StatusBarItem>
+        </StatusBar>
     </Grid>
 </Window>
