--- a/ETestUI/Views/TestView.xaml
+++ b/ETestUI/Views/TestView.xaml
@@ -1,12 +1,14 @@
 ﻿<UserControl
-    x:Class="ETestUI.Config.Views.ConfigMainView"
+    x:Class="ETestUI.Views.TestView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:ETestUI.Config.Views"
+    xmlns:local="clr-namespace:ETestUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="768"
+    d:DesignHeight="660"
     d:DesignWidth="1024"
     mc:Ignorable="d">
-    <Grid Background="Green" />
+    <Grid>
+        <TextBlock Text="测试界面" />
+    </Grid>
 </UserControl>
