--- a/ETestUI/Views/TestPointInfoView.xaml
+++ b/ETestUI/Views/TestPointInfoView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:ETestUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="660"
@@ -10,26 +11,31 @@
     mc:Ignorable="d">
     <Grid>
         <DataGrid
+            Name="datagrid"
             AutoGenerateColumns="False"
             CanUserAddRows="False"
             GridLinesVisibility="All"
-            ItemsSource="{Binding Points}"
-            SelectedItem="{Binding SelectedItem}">
+            ItemsSource="{Binding Points}">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="CellEditEnding">
+                    <i:InvokeCommandAction Command="{Binding CellChangedCommand}" CommandParameter="{Binding ElementName=datagrid, Path=SelectedIndex}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
             <DataGrid.Columns>
                 <DataGridTextColumn
-                    Width="100"
+                    Width="50"
                     Binding="{Binding Index}"
                     Header="内部点"
                     IsReadOnly="True" />
                 <DataGridTextColumn
-                    Width="100"
+                    Width="120"
                     Binding="{Binding Name}"
                     Header="内部点名称"
                     IsReadOnly="True" />
                 <DataGridTextColumn
                     Width="200"
-                    Binding="{Binding Alias}"
-                    Header="别名" />
+                    Binding="{Binding Alias,UpdateSourceTrigger=PropertyChanged}"
+                    Header="别名"  />
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
