--- a/ETestUI/Views/MainWindow.xaml
+++ b/ETestUI/Views/MainWindow.xaml
@@ -64,7 +64,8 @@
                                     Text="新建项目" />
                             </Grid>
                         </Button>
-                        <Button Grid.Column="1" Margin="5,2">
+                        <Button Grid.Column="1" Margin="5,2" Command="{Binding MenuOperateCommand}"
+                            CommandParameter="1">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="2*" />
@@ -168,7 +169,7 @@
                         <TextBlock Margin="5,0" Text="项目" />
                     </Border>
                     <Border BorderBrush="Black" BorderThickness="1,0,0,0">
-                        <TextBlock Margin="5,0" Text="M02" />
+                        <TextBlock Margin="5,0" Text="{Binding ProjectName}" />
                     </Border>
                 </StackPanel>
             </StatusBarItem>
