--- a/ETestUI/Views/SegmentDetailView.xaml
+++ b/ETestUI/Views/SegmentDetailView.xaml
@@ -17,53 +17,24 @@
                 Width="240"
                 Height="180"
                 Header="测试类型">
-                <!--<DataGrid
-                    AutoGenerateColumns="False"
-                    CanUserAddRows="False"
-                    GridLinesVisibility="All"
-                    ItemsSource="{Binding TestSegmentItems}">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="PreviewMouseDoubleClick">
-                            <i:InvokeCommandAction Command="{Binding MouseDoubleClickCommand}" />
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-                    <DataGrid.Columns>
-                        <DataGridTemplateColumn Width="60" Header="选择">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <CheckBox IsChecked="{Binding Select}">
-                                        <i:Interaction.Triggers>
-                                            <i:EventTrigger EventName="Checked">
-                                                <i:InvokeCommandAction Command="{Binding DataContext.CheckedCommand,
-    RelativeSource={RelativeSource FindAncestor, AncestorType=UserControl}}" />
-                                            </i:EventTrigger>
-                                        </i:Interaction.Triggers>
-                                    </CheckBox>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
-                        <DataGridTextColumn
-                            Width="160"
-                            Binding="{Binding Name}"
-                            Header="名称"
-                            IsReadOnly="True" />
-                    </DataGrid.Columns>
-                </DataGrid>-->
-                <ListView ItemsSource="{Binding TestSegmentItems}" SelectedIndex="{Binding SelectedIndex}">
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="PreviewMouseDoubleClick">
-                            <i:InvokeCommandAction Command="{Binding MouseDoubleClickCommand}" />
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
+                <ListView x:Name="listView" ItemsSource="{Binding TestSegmentItems}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
-                                <CheckBox Command="{Binding DataContext.CheckedCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=UserControl}}" CommandParameter="{Binding Id}" IsChecked="{Binding Select}" />
-                                <TextBlock Margin="10,1" Text="{Binding Name}" />
+                                <CheckBox VerticalAlignment="Center"
+                                    Command="{Binding DataContext.CheckedCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=UserControl}}"
+                                    CommandParameter="{Binding Id}"
+                                    IsChecked="{Binding Select}" />
+                                <Label Margin="10,1" Content="{Binding Name}" VerticalAlignment="Center">
+                                    <i:Interaction.Triggers>
+                                        <i:EventTrigger EventName="PreviewMouseDoubleClick">
+                                            <i:InvokeCommandAction Command="{Binding DataContext.MouseDoubleClickCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=ListView}}" CommandParameter="{Binding ElementName=listView, Path=SelectedIndex}" />
+                                        </i:EventTrigger>
+                                    </i:Interaction.Triggers>
+                                </Label>
                             </StackPanel>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-
                 </ListView>
             </GroupBox>
         </Canvas>
